<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_blue"
    android:paddingBottom="10dp"
    tools:context=".view.DetailCatAtivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/lobster"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/item_shape"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cat_detail_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@color/soft_blue"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/cat_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cat_detail_img"
            app:layout_constraintStart_toStartOf="@+id/cat_detail_img"
            app:layout_constraintTop_toBottomOf="@+id/cat_detail_img" />

        <TextView
            android:id="@+id/cat_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/cat_origin"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/cat_name"
            app:layout_constraintStart_toStartOf="@+id/cat_name"
            app:layout_constraintTop_toBottomOf="@+id/cat_name" />

        <TextView
            android:id="@+id/alt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/alt_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cat_origin" />

        <TextView
            android:id="@+id/alt_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_alt_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alt_name" />

        <TextView
            android:id="@+id/jangka_hidup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/jangka_hidup"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alt_name_value" />

        <TextView
            android:id="@+id/jangka_hidup_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_jangka_hidup"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/jangka_hidup"
            app:layout_constraintTop_toBottomOf="@+id/jangka_hidup" />

        <TextView
            android:id="@+id/jangka_hidup_satuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/s_jangka_hidup"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/jangka_hidup_value"
            app:layout_constraintStart_toEndOf="@+id/jangka_hidup_value"
            app:layout_constraintTop_toTopOf="@+id/jangka_hidup_value" />

        <TextView
            android:id="@+id/temperamen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/temperamen"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/jangka_hidup_value"
            app:layout_constraintTop_toBottomOf="@+id/jangka_hidup_value" />

        <TextView
            android:id="@+id/temperamen_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_temperamen"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/temperamen"
            app:layout_constraintTop_toBottomOf="@+id/temperamen" />

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/deskripsi"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/temperamen_value"
            app:layout_constraintTop_toBottomOf="@+id/temperamen_value" />

        <TextView
            android:id="@+id/deskripsi_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_deskripsi"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/deskripsi"
            app:layout_constraintTop_toBottomOf="@+id/deskripsi" />

        <TextView
            android:id="@+id/wikipedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/wikipedia"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/deskripsi_value"
            app:layout_constraintTop_toBottomOf="@+id/deskripsi_value" />

        <TextView
            android:id="@+id/wikipedia_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_wikipedia"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/wikipedia"
            app:layout_constraintTop_toBottomOf="@+id/wikipedia" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>